--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
 <div class="container">
 
 <div class="intro-banner-wrap">
-	<img src="{% static 'images/banners/blue.png' %}" class="img-fluid rounded">
+	<img src="{% static 'images/banners/banner.png' %}" class="img-fluid rounded">
 </div>
 
 </div> <!-- container //  -->
@@ -32,7 +32,7 @@
 			<a href="{{product.get_url}}" class="img-wrap"> <img src="{{product.images.url}}"> </a>
 			<figcaption class="info-wrap">
 				<a href="{{product.get_url}}" class="title">{{product.product_name}}</a>
-				<div class="price mt-1">{{product.price}}</div> <!-- price-wrap.// -->
+				<div class="price mt-1">${{product.price}}</div> <!-- price-wrap.// -->
 			</figcaption>
 		</div>
 	</div> <!-- col.// -->
