--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,9 @@
 
 <!-- custom javascript -->
 <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
+{% comment %} paypal {% endcomment %}
+<script src="https://www.paypal.com/sdk/js?client-id=test&currency=USD"></script>
+
 
 <script type="text/javascript">
 /// some script
