--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -11,12 +11,12 @@
     <div class="card">
         <div class="card-body">
             <h4 class="card-title">Billing Address</h4>
-            <form action="" method="POST">
+            <form action="{% url 'place_order' %}" method="POST">
                 {% csrf_token %}
                 <div class="form-row">
                     <div class="col form-group">
                         <label for="">First Name</label>
-                        <input type="text" name="first_name" class="form-control" required>
+                        <input type="text" name="fist_name" class="form-control" required>
                     </div>
                     <div class="col form-group">
                         <label for="">Last Name</label>
